# aqa_sandbox

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  utils.py
page_elements/: header.py
pages/: base_page.py  header.py  home_page.py
pages/components/: header.py
tests/: conftest.py
tests/api/: test_login.py
tests/ui/: test_admin.py  test_login_dropdown.py
